--- a/index.html
+++ b/index.html
@@ -4,32 +4,34 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Motion Picture Finder</title>
+    <!-- <link rel="stylesheet" href=".assets/css/style.css" /> -->
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"> -->
+    <title>ShowFinder</title>
   </head>
-  <>
+  <body>
     <div id="main" class="container-1">
         <div style="padding-top: 10rem;">
-        <h1 class="center-align title">Motion Picure Finder</h1>
+        <h1 class="center-align title">Show Finder</h1>
     </div>
     <div class="row" style="margin-top: 12rem;margin-bottom: 12rem">
         <div class="col s12 m3"></div>
         <div class="col s12 m6">
             <div class="input-field center-align " style="width: 100%;"></div>
-            <input id="search" type="text" style="background-color: rgba(255, 235, 204,.7);">
             <label for="search" class="active">Search</label>
+            <input id="search" type="text" style="background-color: rgba(255, 235, 204,.7);">
             <button id="searchButton" class=" btn waves-effect blue-grey darken-1" type="submit" name="action">Submit</button>
             <div class="search-results"></div>
+            <label id="score"></label>
       </div>      
     </div>
     <div class="col s12 m3"></div>
-     
     </div>
     <div class="row">
         <div id="Movies-TvShows"> </div>
         
     </div>
-    </div>    
+    </div> 
+    <script src="./assets/js/script.js"></script>   
   </body>
   
 </html>
