--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <!-- <link rel="stylesheet" href="style.css" /> -->
     <title>Motion Picture Finder</title>
   </head>
   <>
@@ -29,7 +29,9 @@
         <div id="Movies-TvShows"> </div>
         
     </div>
-    </div>    
+    </div>  
+      <!-- JavaScript -->
+    <script src="./Assets/JS/script.js"></script>
   </body>
   
 </html>
