--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <title>Motion Picture Finder</title>
   </head>
-  <>
+  <body>
     <div id="main" class="container-1">
         <div style="padding-top: 10rem;">
         <h1 class="center-align title">Motion Picure Finder</h1>
