added movie quote api

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             <h1>Welcome to Show Finder!</h1>
             <p>Simply search your show title below to find out where you can stream it.</p>
             <p id="disclaimer">Valid in the U.S. only. Some restrictions may apply.</p>
+            <div class="mQuote">
+              <p id="movieQuote"></p>
+              <p id="mqInfo"></p>
+            </div>
             <div class="control">
               <input class="input is-focused" type="text" placeholder="Enter show title here..." id="searchInput">
             </div>
@@ -58,7 +62,7 @@
             <p>Title not found. Please try again.</p>
           </div>
         </div>
-        <button id="closeBlank" class="modal-close is-large" aria-label="close"></button>
+        <button id="closeNotFound" class="modal-close is-large" aria-label="close"></button>
     </div>
 
       <!-- jquery, js -->
