--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <p>Title not found. Please try again.</p>
           </div>
         </div>
-        <button id="closeBlank" class="modal-close is-large" aria-label="close"></button>
+        <button id="closeNotFound" class="modal-close is-large" aria-label="close"></button>
     </div>
 
       <!-- jquery, js -->
