updated file names/file paths & readme

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </div>
     </section>
     
-    <!-- hidden modal; empty search input -->
+    <!-- hidden modal: empty search input -->
     <div id="blankTitle" class="modal">
       <div class="modal-background"></div>
         <div class="modal-content" id="customModal">
@@ -54,7 +54,7 @@
         <button id="closeBlank" class="modal-close is-large" aria-label="close"></button>
     </div>
 
-       <!--hidden modal; input not found --> -->
+       <!--hidden modal: input not found --> -->
     <div id="notFound" class="modal">
       <div class="modal-background"></div>
         <div class="modal-content" id="customModal">
@@ -67,6 +67,6 @@
 
       <!-- jquery, js -->
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-      <script src="./Assets/JS/script.js"></script>
+      <script src="./assets/JS/script.js"></script>
   </body>
 </html>
