fixed minor error

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="modal-background"></div>
         <div class="modal-content" id="customModal">
           <div class="box">
-            <p>Show Title cannot be blank.</p>
+            <p>Show title cannot be blank.</p>
           </div>
         </div>
         <button id="closeBlank" class="modal-close is-large" aria-label="close"></button>
