--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
       <div class="modal-background"></div>
         <div class="modal-content" id="customModal">
           <div class="box">
-            <p>Show Title cannot be blank.</p>
+            <p>Show title cannot be blank.</p>
           </div>
         </div>
         <button id="closeBlank" class="modal-close is-large" aria-label="close"></button>
     </div>
 
-       <!--hidden modal: input not found --> -->
+       <!--hidden modal: input not found --> 
     <div id="notFound" class="modal">
       <div class="modal-background"></div>
         <div class="modal-content" id="customModal">
